compiler-core/lexing/tests/snapshots/lexer__string_eof.snap
---
source: compiler-core/lexing/tests/lexer.rs
description: "\"hello\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : STRING
      text : "\"hello\n"
  position : Position { line: 1, column: 1 }
     error : Some("Unterminated single quoted string literal")

annotation : ""
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 2, column: 1 }
     error : None
